; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-utils.c_tl_hashmap_free.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-utils.c_tl_hashmap_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_hashmap = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tl_hashmap_free(%struct.tl_hashmap** %0) #0 {
  %2 = alloca %struct.tl_hashmap**, align 8
  %3 = alloca %struct.tl_hashmap*, align 8
  store %struct.tl_hashmap** %0, %struct.tl_hashmap*** %2, align 8
  %4 = load %struct.tl_hashmap**, %struct.tl_hashmap*** %2, align 8
  %5 = load %struct.tl_hashmap*, %struct.tl_hashmap** %4, align 8
  store %struct.tl_hashmap* %5, %struct.tl_hashmap** %3, align 8
  %6 = load %struct.tl_hashmap*, %struct.tl_hashmap** %3, align 8
  %7 = icmp eq %struct.tl_hashmap* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %23

9:                                                ; preds = %1
  %10 = load %struct.tl_hashmap*, %struct.tl_hashmap** %3, align 8
  %11 = getelementptr inbounds %struct.tl_hashmap, %struct.tl_hashmap* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.tl_hashmap*, %struct.tl_hashmap** %3, align 8
  %14 = getelementptr inbounds %struct.tl_hashmap, %struct.tl_hashmap* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = sext i32 %15 to i64
  %17 = mul i64 %16, 8
  %18 = trunc i64 %17 to i32
  %19 = call i32 @tl_zzfree(i32 %12, i32 %18)
  %20 = load %struct.tl_hashmap*, %struct.tl_hashmap** %3, align 8
  %21 = call i32 @zfree(%struct.tl_hashmap* %20, i32 8)
  %22 = load %struct.tl_hashmap**, %struct.tl_hashmap*** %2, align 8
  store %struct.tl_hashmap* null, %struct.tl_hashmap** %22, align 8
  br label %23

23:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @tl_zzfree(i32, i32) #1

declare dso_local i32 @zfree(%struct.tl_hashmap*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
